# API-Starwars

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  SECURITY.md  deploy_cloud_functions.ps1  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: security-audit.yml
cloud_functions/: api_gateway_config.yaml  main.py  requirements.txt
cloud_functions/src/: __init__.py
cloud_functions/src/models/: __init__.py  base.py  species.py  statistics.py  vehicles.py
cloud_functions/src/services/: swapi_client.py
docs/: DEPLOY_GUIDE.md  PRESENTATION.md  PRESENTATION_SLIDES.md  SECURITY_AUDIT_REPORT.md  Star Wars API - Local.postman_environment.json  Star Wars API Platform.postman_collection.json  architecture.md  openapi.json
docs/planning/: NEXT_DAY_PLAN.md  implementation_plan.md  task.md  walkthrough.md
frontend/: index.html  test.html
scripts/: pre-commit.sh  security_check.sh
src/: __init__.py  config.py  dependencies.py  main.py  middleware.py
src/api/: health.py
src/api/v1/: comparison.py  films.py  people.py  planets.py  rankings.py  router.py  species.py  starships.py  statistics.py  timeline.py  vehicles.py
src/auth/: dependencies.py  firebase.py
src/models/: films.py  people.py  planets.py  starships.py  statistics.py
src/services/: cache_service.py  swapi_client.py
src/utils/: pagination.py  sorting.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_cache_service.py  test_models.py  test_pagination.py  test_sorting.py
